--- a/Bienes_RaicesMVC/views/auth/register.pug
+++ b/Bienes_RaicesMVC/views/auth/register.pug
@@ -6,9 +6,13 @@ block contenido
             span.font-normal Raices
         h2.text-center.text-2xl.font-extrabold=pagina
 
+    if errores 
+        div(class="max-w-md mx-auto my-10")
+            each err in errores
+                p.bg-red.text-white.upeercase.text-xs.text-center.p-2.mb-1.font-bold= err.msg
     .mt-8.mx-auto.max-w-md
         .bg.white.py-8.px-4.shadow 
-            form.space-y-5(method="POST" action="/register")
+            form.space-y-5(method="POST" action="/register" noValidate)
                 div 
                     label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="nombre") Tu nombre 
                     input#nombre.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Tu nombre" type="text" name="nombre")
