--- a/Bienes_RaicesMVC/views/auth/register.pug
+++ b/Bienes_RaicesMVC/views/auth/register.pug
@@ -9,17 +9,20 @@ block contenido
     if errores 
         div(class="max-w-md mx-auto my-10")
             each err in errores
-                p.bg-red.text-white.upeercase.text-xs.text-center.p-2.mb-1.font-bold= err.msg
+                p.bg-red-600.text-white.upeercase.text-xs.text-center.p-2.mb-1.font-bold= err.msg
+
+                
     .mt-8.mx-auto.max-w-md
         .bg.white.py-8.px-4.shadow 
             form.space-y-5(method="POST" action="/register" noValidate)
+            input (type="hidden" name="_csrf" value=csurfToken)
                 div 
-                    label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="nombre") Tu nombre 
-                    input#nombre.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Tu nombre" type="text" name="nombre")
+                    label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="name") Tu nombre 
+                    input#nombre.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Tu nombre" type="text" name="name" value= (userInfo)? userInfo.name : "")
 
                 div 
                     label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="email") Email de registro
-                    input#email.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Tu email" type="email" name="email")
+                    input#email.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Tu email" type="email" name="email" value= (userInfo)? userInfo.email : "")
 
                 div 
                     label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="password") Password
