--- a/Bienes_RaicesMVC/views/auth/forgotPassword.pug
+++ b/Bienes_RaicesMVC/views/auth/forgotPassword.pug
@@ -6,13 +6,20 @@ block contenido
             span.font-normal Raices
         h2.text-center.text-2xl.font-extrabold=pagina
 
+    if errores 
+        div(class="max-w-md mx-auto my-10")
+            each err in errores
+                p.bg-red-600.text-white.upeercase.text-xs.text-center.p-2.mb-1.font-bold= err.msg
+
     .mt-8.mx-auto.max-w-md
         .bg.white.py-8.px-4.shadow 
-            form.space-y-5(action="")
+            form.space-y-5(action="/forgotPassword" method="POST" noValidate)
+                
+                input(type="hidden" name="_csrf" value=csrfToken)
 
                 div 
                     label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="email") Email de registro
-                    input#email.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Tu email" type="email" name="nombre")
+                    input#email.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Tu email" type="email" name="email")
 
                 div.flex.items-center.justify-between
                     a.text-gray-500.text-xs(href="login") Ya tienes Cuenta? Inicia Sesion
