--- a/Bienes_RaicesMVC/views/auth/register.pug
+++ b/Bienes_RaicesMVC/views/auth/register.pug
@@ -15,8 +15,8 @@ block contenido
     .mt-8.mx-auto.max-w-md
         .bg.white.py-8.px-4.shadow 
             form.space-y-5(method="POST" action="/register" noValidate)
-            input (type="hidden" name="_csrf" value=csurfToken)
                 div 
+                    input(type="hidden" name="_csrf" value=csrfToken)
                     label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="name") Tu nombre 
                     input#nombre.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Tu nombre" type="text" name="name" value= (userInfo)? userInfo.name : "")
 
