--- a/Bienes_RaicesMVC/views/props/admin.pug
+++ b/Bienes_RaicesMVC/views/props/admin.pug
@@ -8,4 +8,4 @@ block contenido
 
             p.text-xl.font-bold.text-center.my-10= message
 
-        a(href="props/create" class="rounded py-2 px-10 bg-indigo-600 hover:bg-indigo-700 text-sm font-bold text-center text-white uppercase my-5 inline-block w-full md:w-auto")   Publicar Propiedad
+        a(href="/props/create" class="rounded py-2 px-10 bg-indigo-600 hover:bg-indigo-700 text-sm font-bold text-center text-white uppercase my-5 inline-block w-full md:w-auto")   Publicar Propiedad
