--- a/Bienes_RaicesMVC/views/auth/forgotPassword.pug
+++ b/Bienes_RaicesMVC/views/auth/forgotPassword.pug
@@ -13,7 +13,7 @@ block contenido
 
     .mt-8.mx-auto.max-w-md
         .bg.white.py-8.px-4.shadow 
-            form.space-y-5(action="/forgotPassword" method="POST" noValidate)
+            form.space-y-5(action="auth/forgotPassword" method="POST" noValidate)
                 
                 input(type="hidden" name="_csrf" value=csrfToken)
 
