--- a/Bienes_RaicesMVC/views/auth/login.pug
+++ b/Bienes_RaicesMVC/views/auth/login.pug
@@ -13,7 +13,7 @@ block contenido
 
     .mt-8.mx-auto.max-w-md
         .bg.white.py-8.px-4.shadow 
-            form.space-y-5(action="/login" method="POST")
+            form.space-y-5(action="/auth/login" method="POST")
                 div 
                     input(type="hidden" name="_csrf" value=csrfToken)
                     label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="email") Email de registro
