--- a/Bienes_RaicesMVC/views/auth/register.pug
+++ b/Bienes_RaicesMVC/views/auth/register.pug
@@ -14,7 +14,7 @@ block contenido
                 
     .mt-8.mx-auto.max-w-md
         .bg.white.py-8.px-4.shadow 
-            form.space-y-5(method="POST" action="/register" noValidate)
+            form.space-y-5(method="POST" action="auth/register" noValidate)
                 div 
                     input(type="hidden" name="_csrf" value=csrfToken)
                     label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="name") Tu nombre 
