--- a/Bienes_RaicesMVC/views/layout/index.pug
+++ b/Bienes_RaicesMVC/views/layout/index.pug
@@ -5,8 +5,9 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title Bienes Raices | #{pagina}
         link(rel="stylesheet",href="/css/app.css")
+        block styles
 
-    body 
+    body.min-h-screen.bg-gray-50 
         if bar 
             include header   
 
