--- a/Bienes_RaicesMVC/views/props/create.pug
+++ b/Bienes_RaicesMVC/views/props/create.pug
@@ -1,64 +1,82 @@
 extends ../layout/index
-
+block styles
+    link(rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css")
 block contenido
     .py-10 
         h1.text-4xl.my-10.font-extrabold.text-center Bienes
             span.font-normal Raices
             h2.text-center.text-2xl.font-extrabold= pagina
 
+            if errs 
+                div(class="max-w-md mx-auto my-10")
+                    each err in errs
+                        p.bg-red-600.text-white.upeercase.text-xs.text-center.p-2.mb-1.font-bold= err.msg
+
             div(class="bg-white shadow py-8 px-4 rounded mx-auto max-w-4xl my-10 md:px-10")
-                form.space-y-8
+                form(method="POST" action="/props/create" action+).space-y-8
+                    input(type="hidden" name="_csrf" value=csrfToken)
                     div.space-y-8 
                         h3.text-lg.leading-6.font-medium.text-gray-900 Informacion General de la propiedad 
                             p.text-gray-600 Añade informacion sobre la propiedad en venta
-                        
-                        div 
+                        div
                             label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="title") Titulo de anuncio
-                            input#email.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Titulo Propiedad ej. Casa en la playa" type="text" name="title" value="")
+                            input#title.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Titulo Propiedad ej. Casa en la playa" value=data.title?data.title:"" type="text" name="title")
+                        div
+                           label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="description") Descripcion de anuncio
+                           Textarea#description.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Descripcion Propiedad" name="description" )=data.description?data.description:""
 
                         div(class="md:flex md:gap-4 space-y-5 md:space-y-0")
-
                             div(class="md:w-1/2")
                                 label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="category") Categoria
-                                select#category.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400
+                                select(name="category")#category.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400
                                     option(value="") -Seleccione-
-                                    - var n=1;
-                                        while n<10
-                                            option(value=n) #{n++} 
+                                    each category in categories     
+                                        option(value=category.id selected=data.category? data.category==category.id?true:false : null)=category.name 
 
                             div(class="md:w-1/2")
                                 label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="price") Precio
-                                select#price.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400
+                                select(name="price")#price.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400
                                     option(value="") -Seleccione-
-                         
-                        
+                                    each price in prices     
+                                        option(value=price.id  selected=data.price? data.price==price.id?true:false : null)=price.name 
+
                         div(class="md:flex md:gap-4 space-y-5 md:space-y-0")
 
                             div(class="md:w-1/3")
                                 label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="rooms") Habitaciones
-                                select#rooms.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400
+                                select(name="rooms")#rooms.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400
                                     option(value="") -Seleccione-
                                     - var n=1;
                                         while n<5
-                                            option(value=n) #{n++} 
+                                            option(value=n selected=data.rooms? data.rooms==n?true:false : null) #{n++} 
 
                             div(class="md:w-1/3")
                                 label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="parking") Estacionamiento
-                                select#parking.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400
+                                select(name="parking")#parking.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400
                                     option(value="") -Seleccione-
                                     - var n=1;
                                         while n<4
-                                            option(value=n) #{n++} 
+                                            option(value=n selected=data.parking? data.parking==n?true:false : null) #{n++} 
 
                             div(class="md:w-1/3")
                                 label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="wc") Baños
-                                select#wc.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400
+                                select(name="wc")#wc.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400
                                     option(value="") -Seleccione-
                                     - var n=1;
                                         while n<5
-                                            option(value=n) #{n++} 
-                    
+                                            option(value=n selected=data.wc? data.wc==n?true:false : null) #{n++}
+                        .border-gray-200.border-t.py-5.space-y-5
+                            h3.text-lg.leading-6.font-medium.text-gray-900 Ubicacion
+                            p.text-gray-600 Ubica la propiedad en el mapa
+                            #map.h-96
 
+                            div
+                                p.street
+                                input(type="hidden" name="street" id="street" value=data.street?data.street:"") 
+                                input(type="hidden" name="lat" id="lat" value=data.street?data.lat:"")
+                                input(type="hidden" name="lng" id="lng" value=data.street?data.lng:"")
+
+                    input(class="w-full py-3 bg-indigo-600 hover:bg-indigo-700 rounded text-white font-bold cursor-pointer" type="submit" value="Añadir Imagen")
 block scripts 
     script(src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js")
     script(src="https://unpkg.com/esri-leaflet@3.0.8/dist/esri-leaflet.js")
